# hybrid-differentiable-deferred-splat-mesh-renderer

./: .epistaxis-session.json  .gitignore  ARCHITECTURE.md  CLAUDE.md  FANOUT.md  README.md  agents.md  index.html  main.py  overlay-test.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.telemetry/: tile-budget-latest.json
attractors/: extract-cover-directional-coverage-primitives-into-shared-spatial-kernel-package_2026-06-17.md
preprocessing/: pyproject.toml
preprocessing/splat_bake/: README.md  bake_materials.py  bake_normals.py  multiview_emissive.py  multiview_normals.py  render_splat_view.py  sharpen_normals.py  specular_mask_emissive.py  trim_splats.py
preprocessing/splat_oracle/: __init__.py  adaptive_cameras.py  camera.py  cli.py  coverage.py  first_smoke.py  ghost.py  gravity.py  harvest.py  loader.py  material_solve.py  materials.py  moge_normals.py  pbr_bake.py  pbr_diagnostics.py  sam3_mps_patch.py  segmentation.py  spz_compat.py  supermat_materials.py  tone_mapping.py
preprocessing/tests/: test_bake_materials.py  test_bake_normals.py  test_cli.py  test_field_semantics_export.py  test_first_smoke_export.py  test_segmentation.py  test_sh_payload_export.py  test_spz_compat.py
public/: smoke-assets
scripts/: evil-orb-route-witness.mjs  export_scaniverse_ply_first_smoke.py  harvest-views.mjs  meshsplat-product-bridge-witness.mjs  render-splat-screenshot.mjs  run-visual-smoke.mjs
smoke-assets/: oakland_steps_plants.ply  smoke-assets
src/: alphaDensityRefresh.ts  bloom.ts  buffers.ts  camera.ts  clickToPivot.ts  (+50 more)
(+617 files in other folders)
